--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <html lang="en" >
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://bootswatch.com/3/cyborg/bootstrap.min.css" >
+
   <title>test</title>
 </head>
 
